flex/flex-tests/testData/js2_highlighting/CreateExtendsFix3.js2
package {
 import com.D;

public class CreateExtendsFix3 extends C {
  public function foo() {
    var v : D = <error descr="Initializer type C is not assignable to variable type D">super</error>;
  }
}
}

<error descr="Package should be first statement in file">package</error> {
  public class <error descr="Class 'C' should be defined in file 'C.js2'">C</error> {}

}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'com' does not correspond to file path ''">com</error> {
  public class <error descr="Class 'D' should be defined in file 'D.js2'">D</error> {}
}